CMS7-9095: prevent horizontal scroll bar in broken links report

--- a/cms/brokenlinks/frontend/src/main/java/org/onehippo/cms7/reports/plugins/brokenlinkslist/Hippo.Reports.BrokenLinksList.css
+++ b/cms/brokenlinks/frontend/src/main/java/org/onehippo/cms7/reports/plugins/brokenlinkslist/Hippo.Reports.BrokenLinksList.css
@@ -1,5 +1,5 @@
 /*
- * Copyright 2011-2013 Hippo B.V. (http://www.onehippo.com)
+ * Copyright 2011-2015 Hippo B.V. (http://www.onehippo.com)
  * 
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -13,19 +13,6 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-.hippo-reports-document-list .x-grid3-row {
+.hippo-reports-broken-links .x-grid3-row {
   cursor: pointer;
-}
-
-.hippo-reports-document-list .x-action-col-icon {
-  margin-right: 2px;
-  margin-top: 2px;
-}
-
-.reports-refresh-button {
-    visibility: hidden;
-}
-
-.refresh-group {
-    visibility: hidden;
 }
